// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppBar > should correctly render an AppBar with a MenuItem when the file property is provided > expected html 1`] = `
<div>
  <div
    class="bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center flex"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="flex h-full flex-nowrap space-x-2 bg-slate-700 px-2 text-white hover:bg-slate-600 hover:underline focus:ring-2 focus:ring-black focus:ring-offset-2 focus:outline-hidden aria-expanded:bg-slate-900 aria-expanded:text-white sm:space-x-3 sm:px-4"
          data-state="closed"
          id="radix-:r0:"
          type="button"
        >
          <span
            class="my-auto py-2 sm:text-2xl"
            id="menu-label"
          >
            gcweb:app.title
          </span>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down my-auto size-4"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex items-center space-x-4 text-right"
      >
        <a
          class="underline text-white hover:text-blue-100 focus:text-blue-200 sm:text-lg"
          data-discover="true"
          href="/en"
          lang="en"
        >
          gcweb:language-switcher.alt-lang
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar > should correctly render an AppBar with a MenuItem when the to property is provided > expected html 1`] = `
<div>
  <div
    class="bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center flex"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="flex h-full flex-nowrap space-x-2 bg-slate-700 px-2 text-white hover:bg-slate-600 hover:underline focus:ring-2 focus:ring-black focus:ring-offset-2 focus:outline-hidden aria-expanded:bg-slate-900 aria-expanded:text-white sm:space-x-3 sm:px-4"
          data-state="closed"
          id="radix-:r2:"
          type="button"
        >
          <span
            class="my-auto py-2 sm:text-2xl"
            id="menu-label"
          >
            gcweb:app.title
          </span>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down my-auto size-4"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex items-center space-x-4 text-right"
      >
        <a
          class="underline text-white hover:text-blue-100 focus:text-blue-200 sm:text-lg"
          data-discover="true"
          href="/en"
          lang="en"
        >
          gcweb:language-switcher.alt-lang
        </a>
      </div>
    </div>
  </div>
</div>
`;
